fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -565,7 +565,7 @@ body {
   padding-bottom: 4rem;
 }
 
-.grid-container * {
+.grid-container p:not([class]) {
   max-width: 50ch;
 }
 
@@ -605,6 +605,10 @@ body {
   margin-top: 2.5rem;
 }
 
+.destination-meta p {
+  font-size: 1.75rem;
+}
+
 @media (min-width: 35em) {
   .numbered-title {
     justify-self: start;
@@ -626,11 +630,11 @@ body {
       );
   }
 
-  .grid-container > *:first-child {
+  .grid-container--home > *:first-child {
     grid-column: 2;
   }
 
-  .grid-container > *:last-child {
+  .grid-container--home > *:last-child {
     grid-column: 3;
   }
 
@@ -640,10 +644,12 @@ body {
   }
 
   .grid-container--destination {
+    align-content: start;
+    justify-items: start;
     grid-template-areas:
-      'title title title'
-      'image image tabs'
-      'image image content';
+      '. title title .'
+      '. image tabs .'
+      '. image content .';
   }
 
   .grid-container--destination > img {
@@ -651,6 +657,7 @@ body {
   }
 
   .destination-meta {
-    flex-direction: row;
+    --gap: min(6vw, 6rem);
+    justify-content: start;
   }
 }
